--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
             chmod +x mvnw
             ./mvnw clean package -DskipTests
 
-      - setup_remote_docker:
+      - setup_remote_docker
 
 
       - run:
