--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,45 @@
+version: 2.1
+
 jobs:
+  build:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+
+      - setup_remote_docker:
+          docker_layer_caching: true
+
+      - run:
+          name: Build Docker Image
+          command: |
+            docker build -t djdevops2025/springboot-devops-demo:latest .
+
+      - run:
+          name: Login to DockerHub
+          command: |
+            echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USER" --password-stdin
+
+      - run:
+          name: Push Image to DockerHub
+          command: |
+            docker push djdevops2025/springboot-devops-demo:latest
+
   deploy:
     docker:
       - image: cimg/base:stable
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - "your-key-fingerprint-if-using-circleci's SSH keys"
       - run:
           name: Save private key
           command: |
             echo "$EC2_PRIVATE_KEY" > ec2-key.pem
             chmod 600 ec2-key.pem
+
       - run:
-          name: Deploy to EC2
+          name: SSH and deploy on EC2
           command: |
             ssh -o StrictHostKeyChecking=no -i ec2-key.pem $EC2_USER@$EC2_HOST << EOF
+              docker login -u $DOCKERHUB_USER -p $DOCKERHUB_PASS
               docker pull djdevops2025/springboot-devops-demo:latest
               docker stop \$(docker ps -q --filter ancestor=djdevops2025/springboot-devops-demo:latest) || true
               docker rm \$(docker ps -aq --filter ancestor=djdevops2025/springboot-devops-demo:latest) || true
@@ -23,10 +48,11 @@ jobs:
 
 workflows:
   version: 2
-  build-deploy:
+  build_and_deploy:
     jobs:
       - build
       - deploy:
           requires:
             - build
             
+
