--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,20 @@ jobs:
               docker run -d -p 8081:8081 djdevops2025/springboot-devops-demo:latest
             EOF
 
+      - run:
+          name: Deploy on EC2
+          command: |
+            ssh -o StrictHostKeyChecking=no -i ec2-key.pem $EC2_USER@$EC2_HOST << EOF
+              docker pull djdevops2025/springboot-devops-demo:latest
+              docker stop app || true
+              docker rm app || true
+              docker run -d -p 8081:8081 --name app djdevops2025/springboot-devops-demo:latest
+      EOF
+
+
+
+
+
 workflows:
   version: 2
   build_and_deploy:
