--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,15 +36,17 @@ jobs:
             chmod 600 ec2-key.pem
 
       - run:
-          name: SSH and deploy
-          command: |
-            ssh -o StrictHostKeyChecking=no -i ec2-key.pem $EC2_USER@$EC2_HOST '
-              echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USER" --password-stdin &&
-              docker pull djdevops2025/springboot-devops-demo:latest &&
-              docker stop app || true &&
-              docker rm app || true &&
-              docker run -d -p 8081:8081 --name app djdevops2025/springboot-devops-demo:latest
-            '
+           name: SSH and deploy
+           command: |
+             ssh -o StrictHostKeyChecking=no -i ec2-key.pem $EC2_USER@$EC2_HOST '
+             docker login -u "$DOCKERHUB_USER" -p "$DOCKERHUB_PASS" &&
+             docker pull djdevops2025/springboot-devops-demo:latest &&
+             docker stop app || true &&
+             docker rm app || true &&
+             docker run -d -p 8081:8081 --name app djdevops2025/springboot-devops-demo:latest
+             '
+
+
 
 workflows:
   build_and_deploy:
