--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,17 +11,17 @@ jobs:
           docker_layer_caching: true
 
       - run:
-          name: Build Docker image
+          name: Build Docker Image
           command: |
             docker build -t djdevops2025/springboot-devops-demo:latest .
 
       - run:
-          name: Docker login
+          name: Login to DockerHub
           command: |
-            echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USER" --password-stdin
+            echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USER" --password-stdin
 
       - run:
-          name: Push image to DockerHub
+          name: Push Image to DockerHub
           command: |
             docker push djdevops2025/springboot-devops-demo:latest
 
@@ -30,25 +30,24 @@ jobs:
       - image: cimg/base:stable
     steps:
       - run:
-          name: Save EC2 private key
+          name: Save EC2 Private Key
           command: |
             echo "$EC2_PRIVATE_KEY" > ec2-key.pem
             chmod 600 ec2-key.pem
 
       - run:
-           name: SSH and deploy
-           command: |
-             ssh -o StrictHostKeyChecking=no -i ec2-key.pem $EC2_USER@$EC2_HOST '
-             docker login -u "$DOCKERHUB_USER" -p "$DOCKERHUB_PASSWORD" &&
-             docker pull djdevops2025/springboot-devops-demo:latest &&
-             docker stop app || true &&
-             docker rm app || true &&
-             docker run -d -p 8081:8081 --name app djdevops2025/springboot-devops-demo:latest
-             '
-
-
+          name: SSH into EC2 and deploy
+          command: |
+            ssh -o StrictHostKeyChecking=no -i ec2-key.pem $EC2_USER@$EC2_HOST '
+              echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USER" --password-stdin
+              docker pull djdevops2025/springboot-devops-demo:latest
+              docker stop app || true
+              docker rm app || true
+              docker run -d -p 8081:8081 --name app djdevops2025/springboot-devops-demo:latest
+            '
 
 workflows:
+  version: 2
   build_and_deploy:
     jobs:
       - build
