--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,13 @@ jobs:
       - image: cimg/base:stable
     steps:
       - checkout
-
+      
+      - run:
+          name: Run Unit Tests
+          command: |
+            sudo apt-get update && sudo apt-get install -y maven
+            mvn clean test
+            
       - setup_remote_docker:
           docker_layer_caching: true
 
