--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,16 +3,16 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/base:stable
+      - image: cimg/openjdk:17.0
     steps:
       - checkout
       
       - run:
           name: Run Unit Tests
           command: |
-            sudo apt-get update && sudo apt-get install -y maven
+          
             mvn clean test
-            
+
       - setup_remote_docker:
           docker_layer_caching: true
 
