--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
         </executions>
       </plugin>
     </plugins>
+    <plugin>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>3.9.1.2184</version>
+    </plugin>
+
   </build>
 
 </project>
