--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,13 +18,13 @@ jobs:
           path: target/site/jacoco
           destination: jacoco-report
 
-      - run:
-          name: Run SonarQube analysis
-          command: |
-              mvn sonar:sonar \
-              -Dsonar.projectKey=springboot-devops-demo \
-              -Dsonar.host.url=$SONAR_HOST_URL \
-              -Dsonar.login=$SONAR_TOKEN   
+#      - run:
+#          name: Run SonarQube analysis
+#          command: |
+#              mvn sonar:sonar \
+#              -Dsonar.projectKey=springboot-devops-demo \
+#              -Dsonar.host.url=$SONAR_HOST_URL \
+#              -Dsonar.login=$SONAR_TOKEN   
   
 
       - setup_remote_docker:
