--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=springboot-devops-demo
 server.port=8081
-management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
+management.endpoints.web.base-path=/actuator
+
